// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should render a step that does have leading line 1`] = `
<View
  style={
    Object {
      "marginTop": 7,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginRight": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderRadius": 15,
              "borderWidth": 1,
              "height": 30,
              "marginBottom": 7,
              "width": 30,
            },
            null,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 14,
                "lineHeight": 28,
                "textAlign": "center",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          2
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderLeftWidth": 1,
              "flex": 1,
              "height": 10,
              "width": 0,
            },
            null,
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 0.8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "raleway-medium",
              "fontSize": 24,
            },
            Object {
              "marginBottom": 10,
            },
          ]
        }
      >
        step two
      </Text>
      <Text
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        this step is not a first step so it has a line leading in
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "borderLeftWidth": 1,
            "height": 18,
            "width": 0,
          },
          null,
          Object {
            "marginLeft": 34.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Step should render a step with no leading line 1`] = `
<View
  style={
    Object {
      "marginTop": 7,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginRight": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderRadius": 15,
              "borderWidth": 1,
              "height": 30,
              "marginBottom": 7,
              "width": 30,
            },
            null,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 14,
                "lineHeight": 28,
                "textAlign": "center",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          1
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderLeftWidth": 1,
              "flex": 1,
              "height": 10,
              "width": 0,
            },
            null,
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 0.8,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "raleway-medium",
              "fontSize": 24,
            },
            Object {
              "marginBottom": 10,
            },
          ]
        }
      >
        step one
      </Text>
      <Text
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        this is test body text
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "borderLeftWidth": 1,
            "height": 18,
            "width": 0,
          },
          null,
          Object {
            "marginLeft": 34.5,
          },
        ]
      }
    />
  </View>
</View>
`;
